Grace/tests/gibbs/errors/t113.grace
// ERROR = P1011
object {
var name
}
